<resources>
    <string name="app_name">Assignment</string>
    <string name="open_Nav">Open Navigation Drawer</string>
    <string name="close_Nav">Close Navigation Drawer</string>
    <string name="electronic">Electronic</string>
    <string name="clothes">Clothes</string>
    <string name="furniture">Furniture</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="example_com">example.com</string>
    <string name="userprofilephoto">userProfilePhoto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="order">Order</string>
    <string name="bottom_menu">Bottom_Menu</string>
    <string name="saved_products">Saved Products</string>
    <string name="Chat" />
    <string name="stationary">Stationary</string>
    <string name="electronic_item">Electronic Item</string>
    <string name="sports">Sports</string>
    <string name="cars">Cars</string>
    <string name="products">Product</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="Price">Price</string>
    <string name="sell">Sell</string>
    <string name="chat_platform">Chat Platform</string>
    <string name="order_request">Order Request</string>
    <string-array name="deal_method">
        <item>Pos Laju</item>
        <item>Meet Up</item>
    </string-array>
    <string-array name="address">
        <item>Address 1</item>
        <item>Address 2</item>
    </string-array>
    <string-array name="payment_methods">
        <item>Credit Card</item>
        <item>Online Banking</item>
        <item>Online Banking</item>
    </string-array>
</resources>