<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sideHome"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/sideElectronic"
            android:icon="@drawable/baseline_phone_android_24"

            android:title="@string/electronic" />
        <item
            android:id="@+id/sideFurniture"
            android:icon="@drawable/baseline_chair_24"
            android:title="@string/furniture" />
        <item
            android:id="@+id/sideClothes"
            android:icon="@drawable/checkroom_black_24dp"
            android:title="@string/clothes" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/sideLogin"
                    android:icon="@drawable/baseline_login_24"
                    android:title="@string/login" />

                <item
                    android:id="@+id/sideLogout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/logout" />


            </menu>
        </item>


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/sideShare"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/sideRate"
                android:icon="@drawable/baseline_rate_review_24"
                android:title="@string/rate_us" />

        </menu>
    </item>

    </group>
</menu>
