<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bottomHome"
    android:icon="@drawable/baseline_home_24"
    android:title="@string/home"/>

    <item android:id="@+id/bottom_order"
        android:icon="@drawable/baseline_playlist_add_check_24"
        android:title="@string/order"/>

    <item android:id="@+id/bottom_sell"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/sell"/>

    <item android:id="@+id/bottom_notification"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications"/>

    <item android:id="@+id/bottom_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

</menu>