<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardElevation="3dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/productImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/products"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline6"/>
            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/Price"
                android:textAppearance="?attr/textAppearanceBody2"/>
            <TextView
                android:id="@+id/productDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceBodySmall"/>

    </LinearLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>